Add jSpecify node.upload.bulkjsonwebpost package.